# VGsim

./: .gitignore  BirthDeath.cpp  BirthDeath.html  BirthDeath.py  BirthDeath.pyx  BirthDeathCython.cpp  BirthDeathCython.html  BirthDeathCython.pyx  BirthDeathCython.pyx copy  IO.py  README.md  Simulator.py  VGsim.py  VGsim_cmd.py  ViralSim.py  _BirthDeath.pyx  example.mg  example.rt  fast_choose.html  fast_choose.pxi  functions.py  meson.build  models.pxi  mutations_popModel.pxi  pyproject.toml  script.sh  setup.py  test_c.py  test_interface.py  vgsim.py
.github/workflows/: dev.yml  macos.yml  pip.yml  test.yml  ubuntu.yml  windows.yml
VGSimulator/: __init__.py  setup.py
VGsim/: IO.py  README.md  Simulator.py  VGsim_cmd.py  _BirthDeath.pyx  fast_choose.pxi  interface.py  models.pxi  pyproject.toml  setup.py  sim.py
VGsim/data/Table 4/: Table 4.ipynb
VGsim/docs/source/: Command line.rst  Installation.rst  Migration.rst  conf.py  index.rst
VGsim/src/: IO.py  _BirthDeath.pyx  _interface.py
VGsim/testing/: check_simulator.py  example.py  getting_reference.py
VGsim/tests/: test_interface.py
VGsim_new/: __init__.py  additional_information.cpp  arg.cpp  arg.h  chain.cpp  chain.h  condition_stop.cpp  direct.cpp  infectious.cpp  infectious.h  interface.py  numbers.cpp  population.cpp  population.h  population_pool.cpp  population_pool.h  random_generator.cpp  random_generator.h  simulator.cpp  simulator.h  susceptibles.cpp  susceptibles.h  tau.cpp  tau.h  wrap.cpp
VGsim_new/algorithm/: arg.cpp  direct.cpp  direct.h  tau.cpp
VGsim_new/data/: chain.cpp  chain.h  infectious.cpp  infectious.h  susceptibles.cpp  susceptibles.h
VGsim_new/population/: population_pool.cpp  population_pool.h
VGsim_new/structure/: array_base.cpp  array_sqrt.cpp  array_tree.cpp
VGsim_new/utils/: condition_stop.cpp  condition_stop.h  numbers.cpp  utils.cpp  utils.h
data/: model_example.py
data/Table 3/: Table 3.ipynb  Table 3.py  table.txt
data/Table 4/: Table 4.ipynb
data/VGsim and TiPS/: test_TiPS.R  test_VGsim.py
docs/: Makefile  make.bat
docs/source/: Command line.rst  Documentation.rst  Examples.rst  Extra.rst  Haplotypes.rst  Installation.rst  Migration.rst  Tutorial.rst  Tutorials and examples.rst  VGsim.rst  conf.py  index.rst  modules.rst
example/: example.ld  example.mg  example.pp  example.rt  example.st  example.su  model_example.py
source/: __init__.py
src/: ARG.cpp  IO.py  Untitled.ipynb  _BirthDeath.pyx  __init__.py  _interface.py  additional_information.h  arg.h  chain.cpp  chain.h  condition_stop.cpp  condition_stop.h  counters.cpp  counters.h  debug_solution  direct.cpp  direct.h  events.pxi  fast_choose.pxi  fast_solution  genealogy.cpp  infectious.cpp  infectious.h  interface.py  lockdown.cpp  lockdown.h  main.cpp  meson.build  models.pxi  pointers.cpp  population.cpp  population_pool.cpp  population_pool.h  random_generator.cpp  random_generator.h  setup.py  simulator.cpp  simulator.h  susceptibles.cpp  susceptibles.h  (+6 more)
testing/: Another SIR testing.py  check_simulator.py  example.ipynb  example.py  example_general_sampling.py  example_migration_restrictions.py  getting_reference.py  test.py  testing.py  tests.py
testing/cmd_example/: example.mg
testing/example/: example.st  example.su
testing/example_output/: migrations.tsv  mutations.tsv  sample_population.tsv  tree.nwk
tests/: meson.build  test_interface.py
