[build-system]
requires  = [
    "wheel",
    "meson>=0.60.3",
    "mesonpep517",
    "ninja",
    "numpy>=1.19.5",
    "Cython>=0.29.18",
    "mc_lib @ git+http://github.com/ev-br/mc_lib.git@v0.4.1"
]

build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Vladimir Shchur et al"
author-email="vshchur@hse.ru"
home-page="https://scg.hse.ru"
project-urls=[
    "Source, https://github.com/Genomics-HSE/VGsim",
]
summary = "VGsim is the fast viral genealogy simulator for world-wide pandemic scenarios."
requires-python="py3"
description-file="README.md"
platforms="any"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires  = [
    "numpy>=1.19.5",
    "mc_lib @ git+http://github.com/ev-br/mc_lib.git@v0.4.1",
    "prettytable",
    "matplotlib",
    "pytest",
    "tskit"
]
